--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,11 +21,12 @@ classifiers = [
 ]
 requires-python = ">=3.6"
 dependencies = [
-  "ax-platform==0.2.9",
+  "ax-platform==0.3.4",
   "botorch==0.9.2",
+  "dill==0.3.7",
   "matplotlib==3.7.3",
   "numpy==1.26.0",
-  "torch==2.0.1",
+  "pyyaml==6.0.1",
 ]
 
 [project.urls]
