--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
   "ax-platform==0.3.4",
   "botorch==0.9.2",
   "dill==0.3.7",
+  "ipykernel==6.25.2",
   "matplotlib==3.7.3",
   "numpy==1.26.0",
   "pyyaml==6.0.1",
