🐳 Upgrade pip in Dockerfile

--- a/docker/sledo-ubuntu/Dockerfile
+++ b/docker/sledo-ubuntu/Dockerfile
@@ -11,6 +11,7 @@ RUN cd /$WORKDIR && \
     git clone https://github.com/aurora-multiphysics/sledo.git && \
     cd sledo && \
     git checkout "$build_git_sha" && \
+    pip install --upgrade pip && \
     sudo apt update && \
     sudo apt install python3.8-venv && \
     chmod +x install.sh && \
