✅ Update tests for current architecture
Also update Three Hump Camel Design Evaluator for use in tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,11 @@ dependencies = [
   "ray==2.9.0",
 ]
 
+[project.optional-dependencies]
+test = [
+    "pytest==8.0.2",
+]
+
 [project.urls]
 "Repository" = "https://github.com/aurora-multiphysics/sledo"
 "Issue Tracker" = "https://github.com/aurora-multiphysics/sledo/issues"
