👷 Update CI: combine lint and test, update python ver.
Update the CI to combine the linting and testing to a single job. As MOOSE is no longer a hard dependency, remove containerised testing job. Also ensure usage of python 3.11 as the new minimum version.

--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -14,48 +14,27 @@ on:
 
 # This section controls which jobs the workflow will run
 jobs:
-  run-linter:
+  lint-and-test:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
-      
-      - name: Create venv and install requirements
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - name: Create venv and install
         run: |
-          python3 -m venv venv
+          python -m venv venv
           . venv/bin/activate
-          pip3 install build --upgrade
-          python3 -m build
-          pip3 install ./dist/*.whl
+          pip install .
 
       - name: Run linter
         run: |
           . venv/bin/activate
-          pip3 install flake8
+          pip install flake8
           flake8 . --exclude=venv* --count --max-complexity=10 --max-line-length=79 --statistics
-
-  build-and-test:
-    runs-on: ubuntu-latest
-
-    env:
-      PRCOMMITSHA : ${{ github.event.pull_request.head.sha }}
-
-    steps:
-      - uses: actions/checkout@v3
-      
-      - name: Print github context
-        run: echo $PRCOMMITSHA
-
-      - name: Docker build (pull request)
-        if:  ${{ github.event.pull_request.head.sha != '' }}
-        run: docker build -t ci-sledo-ubuntu --build-arg build_git_sha=$PRCOMMITSHA docker/sledo-ubuntu/
-  
-      - name:  Docker build (push)
-        if:  ${{ github.event.pull_request.head.sha == '' }}
-        run: docker build -t ci-sledo-ubuntu --build-arg build_git_sha=$GITHUB_SHA docker/sledo-ubuntu/
 
       - name: Run tests
         run: |
-          pip3 install pytest
+          pip install pytest
           pytest tests
-  
