--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,9 +21,9 @@ classifiers = [
 ]
 requires-python = ">=3.11"
 dependencies = [
-  "ax-platform[mysql]==0.4.0",
   "dill==0.3.7",
-  "ray[train]==2.9.0",
+  "ray[train]==2.31.0",
+  "bayesian-optimization==1.5.0",
 ]
 
 [project.optional-dependencies]
